fix(aboutMe): change overflow in 'time-line' class to auto

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     z-index: 6;
     height: 90%;
-    overflow: visible;
+    overflow: auto;
 
     .show-scroll-indicator{
         font-size: 50px;
